--- a/Utils/Utils.csproj
+++ b/Utils/Utils.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{EA710F8C-14A4-49C1-B080-BCAC5AA00E4F}</ProjectGuid>
+    <ProjectGuid>{BBCFD868-60E1-492A-9803-2B8F1948665A}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>MECSharp_28_NeverWriteAsyncVoidMethods</RootNamespace>
-    <AssemblyName>MECSharp_28_NeverWriteAsyncVoidMethods</AssemblyName>
+    <RootNamespace>Utils</RootNamespace>
+    <AssemblyName>Utils</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,18 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MECSharp_28_NeverWriteAsyncVoidMethods.cs" />
-    <Compile Include="Pg144_2_UseAppDomain.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Utilities\Utilities.csproj">
-      <Project>{f2e9f3ce-67cd-449a-ac9f-9eb4aac228a6}</Project>
-      <Name>Utilities</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
