--- a/MECSharp_28_NeverWriteAsyncVoidMethods/MECSharp_28_NeverWriteAsyncVoidMethods.csproj
+++ b/MECSharp_28_NeverWriteAsyncVoidMethods/MECSharp_28_NeverWriteAsyncVoidMethods.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,6 +46,9 @@
   <ItemGroup>
     <Compile Include="MECSharp_28_NeverWriteAsyncVoidMethods.cs" />
     <Compile Include="Pg144_2_UseAppDomain.cs" />
+    <Compile Include="Pg146_AsyncVoidEventHandler.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
