i38 pg174_UsingTaskList change to read file async

--- a/MECSharp_34_CacheGeneralizedAsyncReturnTypes/MECSharp_34_CacheGeneralizedAsyncReturnTypes.csproj
+++ b/MECSharp_34_CacheGeneralizedAsyncReturnTypes/MECSharp_34_CacheGeneralizedAsyncReturnTypes.csproj
@@ -6,4 +6,8 @@
     <LangVersion>7.3</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Utilities\Utilities.csproj" />
+  </ItemGroup>
+
 </Project>
