--- a/MECSharp_35_HowPLINQImplementsParallelAlgorithms/MECSharp_35_HowPLINQImplementsParallelAlgorithms.csproj
+++ b/MECSharp_35_HowPLINQImplementsParallelAlgorithms/MECSharp_35_HowPLINQImplementsParallelAlgorithms.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Utilities\Utilities.csproj" />
+  </ItemGroup>
+
 </Project>
